# mcp-data-science

./: .env_sample  LICENSE  README.md  mcp_config_data_science.json  mcp_data_science.py  pyproject.toml
samples/titanic/generated_code/: titanic_automl_automl.py  titanic_eda_eda.py  titanic_load_data_loading.py
samples/titanic/logs/: operation_report_104896aa.json  operation_titanic_automl.json  operation_titanic_eda.json  operation_titanic_load.json  operation_titanic_upload.json
samples/titanic/models/: best_model_titanic_automl.pkl
samples/titanic/reports/: automl_report_titanic_automl.json  comprehensive_report_report_104896aa_20250609_010152.md  eda_report_titanic_eda.json
